# Metric-Learning-X-Lightning

./: Makefile  README.md  pyproject.toml
configs/: conf.yaml
configs/lightning_module/: ArcFaceLoss.yaml  SubCenterArcFaceLoss.yaml  TripletMarginLoss.yaml  conf.yaml
src/: config.py  datamodule.py  dataset.py  lightning_module.py  lightning_module_arc_face_loss.py  lightning_module_triplet_margin_loss.py  metrics.py  train.py  transforms.py
src/callbacks/: batch_visualization.py  debug.py  embedding_visualization_callback.py
