[tool.poetry]
name = "metric-learning-x-lightning"
version = "0.1.0"
description = ""
authors = ["Artem Verbov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clearml = "^1.14.1"
torchvision = "^0.16.2"
opencv-python = "^4.9.0.80"
lightning = "^2.1.3"
pydantic = "^2.5.3"
albumentations = "^1.3.1"
hydra-core = "^1.3.2"
pytorch-metric-learning = "^2.4.1"
timm = "^0.9.12"
tensorboard = "^2.15.1"
faiss-cpu = "^1.7.4"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
pandas = "^2.2.0"
autopep8 = "^2.0.4"
wemake-python-styleguide = "^0.18.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
